2011-06-04  vadim  <vadim@netcitadel.com>

	* RuleSetView.cpp (itemDoubleClicked): as part of the GUI
	usability improvements, its behavior when user double clicks on
	"any" in a rule has changed. Now the program opens object "any" in
	the editor and shows prompt text that explains its behavior.  The
	editor stays read-only and should appear grayed-out if palette
	is set up for that. This reverses the change made for #1731. See #2454.

2011-06-03  vadim  <vadim@netcitadel.com>

	* applied patch to provide configure command line option to specify
	path to ccache. Thanks to user "a. k. huettel " on SourceForge.

	* NATCompiler_pf.cpp (_expand_addr): see #2455 NAT Compiler for PF
	should use "(interface)" syntax to the right of "->" in NAT rules.
	This now works for all interfaces, including those that have ip
	addresses in fwbuilder configuration, when interface object
	appears in "Translated Source" in a nat rule. When firewall object
	appears in "Translated Source", it gets replaced with a set of its
	interfaces which also get translated into "-> (interface)".

	* NATCompiler_ipt.cpp (compile): see #2456 Added support for
	single object negation in "Inbound Interface" and "Outbound
	Interface" columns in compiler for iptables.

	* NATCompiler_pf.cpp (compile): see #2456 Added support for single
	object negation in "Interface" rule element of PF NAT rules. Now
	compiler can produce PF commands such as "nat on ! em0 ... " (for
	PF <4.7) or "match on ! em0 ..." (for PF >= 4.7)

	* Compiler.cpp (singleObjectNegation::processNext): moved rule
	processor that processes single object negation in any rule
	element to the base class Compiler.

2011-06-02  Vadim Kurland  <vadim@netcitadel.com>

	* pf.g (set_rule): see #2464 implemented import of PF "set timeout",
	"set limit" and other "set" commands. Known limitations:
	  - commands "set ruleset-optimization", "set loginterface",
	    "set block-policy", "set state-defaults", "set require-order",